Simplified CDC continuous TX. Test python script needs 'pyserial' and py3.x
Signed-off-by: BisonLeo <Shun.bai@summer2020>

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>usbCom</name>
+	<name>USBcomL4</name>
 	<comment></comment>
 	<projects>
 	</projects>
